Forgot Password Created

--- a/SanrooLK/Views/MainFrames/ForgotPassword.xaml
+++ b/SanrooLK/Views/MainFrames/ForgotPassword.xaml
@@ -11,6 +11,289 @@
              MaxHeight="1117"
              Background="White">
     <Grid>
-            
+        <Viewbox Stretch="Uniform">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="209"></ColumnDefinition>
+                    <ColumnDefinition Width="697"></ColumnDefinition>
+                    <ColumnDefinition Width="96"></ColumnDefinition>
+                    <ColumnDefinition Width="101"></ColumnDefinition>
+                    <ColumnDefinition Width="519"></ColumnDefinition>
+                    <ColumnDefinition Width="106"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="240"></RowDefinition>
+                    <RowDefinition Height="79"></RowDefinition>
+                    <RowDefinition Height="266"></RowDefinition>
+                    <RowDefinition Height="100"></RowDefinition>
+                    <RowDefinition Height="59"></RowDefinition>
+                    <RowDefinition Height="126"></RowDefinition>
+                    <RowDefinition Height="247"></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <!--Sanroo Main Image-->
+                <Viewbox Stretch="Uniform"
+                Grid.Column="1"
+                Grid.Row="2">
+                    <Image
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center">
+                        <Image.Source>
+                            <BitmapImage UriSource="https://res.cloudinary.com/dwbw83rrr/image/upload/v1737500643/yulnav7tzmwaldnswvnz.png"/>
+                        </Image.Source>
+                    </Image>
+                </Viewbox>
+
+                <!--Sanroo Main Text-->
+                <Viewbox Stretch="Uniform"
+                 Grid.Column="1"
+                 Grid.Row="4">
+                    <Label
+                    Name="MainFrameText"
+                    Content="Sanroo Enterprises (PVT) LTD"
+                    FontSize="50"
+                    FontFamily="Lucida Fax"
+                    FontWeight="Bold"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"/>
+                </Viewbox>
+
+                <!--Login Board-->
+                <Viewbox Stretch="Uniform"
+                     Grid.Column="4"
+                     Grid.Row="2"
+                     Grid.RowSpan="3">
+                    <Border Background="White"
+                        BorderBrush="Black"
+                        BorderThickness="0"
+                        CornerRadius="10"
+                        Width="775"
+                        Height="630">
+                        <Border.Effect>
+                            <DropShadowEffect
+                            ShadowDepth="3"
+                            BlurRadius="15"
+                            Color="Black"
+                            Opacity="10"/>
+                        </Border.Effect>
+                    </Border>
+                </Viewbox>
+
+                <!--Login Board-->
+                <Grid
+                Grid.Column="4"
+                Grid.Row="2"
+                Grid.RowSpan="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="51"></ColumnDefinition>
+                        <ColumnDefinition Width="418"></ColumnDefinition>
+                        <ColumnDefinition Width="50"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="37"></RowDefinition>
+                        <RowDefinition Height="59"></RowDefinition>
+                        <RowDefinition Height="31"></RowDefinition>
+                        <RowDefinition Height="33"></RowDefinition>
+                        <RowDefinition Height="19"></RowDefinition>
+                        <RowDefinition Height="17"></RowDefinition>
+                        <RowDefinition Height="55"></RowDefinition>
+                        <RowDefinition Height="16"></RowDefinition>
+                        <RowDefinition Height="13"></RowDefinition>
+                        <RowDefinition Height="63"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <!--Login Board Content-->
+                    <Viewbox Stretch="Uniform"
+                         Grid.Column="1"
+                         Grid.Row="1">
+                        <Label Content="Reset Password"
+                           FontSize="20"
+                           Foreground="Black"
+                           FontFamily="Lucida Fax"
+                           FontWeight="Bold"
+                           VerticalAlignment="Top"
+                           HorizontalAlignment="Center"/>
+                    </Viewbox>
+                    <!--Horizontal Ruler-->
+                    <Viewbox Stretch="Uniform"
+                         Grid.Column="1"
+                         Grid.Row="2">
+                        <Border BorderThickness="0,0.5,0,0"
+                            BorderBrush="Black" 
+                            Width="140"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Top"
+                            RenderTransformOrigin="0.5,0.5"
+                            Height="10">
+                            <Border.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleY="-1"/>
+                                    <SkewTransform/>
+                                    <RotateTransform/>
+                                    <TranslateTransform/>
+                                </TransformGroup>
+                            </Border.RenderTransform>
+                        </Border>
+                    </Viewbox>
+
+                    <!--Username Section-->
+                    <Viewbox Stretch="Uniform"
+                         Grid.Column="1"
+                         Grid.Row="4"
+                         Grid.RowSpan="2">
+                        <Label Content="Email Address"
+                           FontSize="26"
+                           FontFamily="Lucida Fax"
+                           FontWeight="Bold"
+                           HorizontalContentAlignment="Left"
+                           Width="657"
+                           Margin="8"/>
+                    </Viewbox>
+                    <Viewbox Stretch="Uniform"
+                         Grid.Column="1"
+                         Grid.Row="6">
+                        <Border Background="White"
+                            BorderBrush="Black"
+                            BorderThickness="0"
+                            CornerRadius="10"
+                            Width="418"
+                            Height="50">
+                            <Border.Effect>
+                                <DropShadowEffect 
+                                ShadowDepth="2"
+                                BlurRadius="12"
+                                Color="Gray"
+                                Opacity="20"/>
+                            </Border.Effect>
+                            <TextBox Name="txt_Username"
+                                 HorizontalAlignment="Center" 
+                                 VerticalAlignment="Center" 
+                                 Width="398" 
+                                 Height="40" 
+                                 Padding="0, 5, 0, 5"
+                                 Background="Transparent"
+                                 CaretBrush="#C1C1D2"
+                                 FontFamily="Lucida Fax"
+                                 FontSize="24"
+                                 Foreground="#000000"
+                                 VerticalContentAlignment="Center"
+                                 BorderThickness="0"/>
+                        </Border>
+                    </Viewbox>
+
+                    <!--Login Button-->
+                    <Viewbox Stretch="Uniform"
+                         Name="btn_Login"
+                         Grid.Column="1"
+                         Grid.Row="12">
+                        <Border Name="border_Login"
+                            Background="Black"
+                            BorderBrush="Black"
+                            BorderThickness="0"
+                            CornerRadius="10"
+                            Width="418"
+                            Height="50">
+                            <Border.RenderTransform>
+                                <ScaleTransform x:Name="scaleTransform" />
+                            </Border.RenderTransform>
+                            <Border.RenderTransformOrigin>
+                                <Point X="0.5" Y="0.5"/>
+                            </Border.RenderTransformOrigin>
+                            <Border.Triggers>
+                                <EventTrigger RoutedEvent="MouseEnter">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                    To="DarkRed" Duration="0:0:0.2"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="Effect.Opacity"
+                                     To="0.5" Duration="0:0:0.2"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                                <EventTrigger RoutedEvent="MouseLeave">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                    To="Black" Duration="0:0:0.2"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="Effect.Opacity"
+                                     To="0.2" Duration="0:0:0.2"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                                <EventTrigger RoutedEvent="PreviewMouseDown">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                                        To="DarkRed" Duration="0:0:0.1"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="Effect.BlurRadius"
+                                                         To="25" Duration="0:0:0.1"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                                         To="0.95" Duration="0:0:0.1"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                                         To="0.95" Duration="0:0:0.1"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                                <EventTrigger RoutedEvent="PreviewMouseUp">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                                        To="DarkRed" Duration="0:0:0.1"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="Effect.BlurRadius"
+                                                         To="15" Duration="0:0:0.1"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                                         To="1" Duration="0:0:0.1"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                                         To="1" Duration="0:0:0.1"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                            </Border.Triggers>
+                            <Border.Effect>
+                                <DropShadowEffect ShadowDepth="2"
+                                              BlurRadius="15"
+                                              Color="Gray"
+                                              Opacity="0.2"/>
+                            </Border.Effect>
+                            <Label Name="btn_LoginText"
+                               Content="Submit"
+                               Foreground="White"
+                               FontSize="20"
+                               FontFamily="Lucida Fax"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"/>
+                        </Border>
+                    </Viewbox>
+                </Grid>
+
+
+                <!--GetHelp-->
+                <Grid Grid.Column="4"
+                  Grid.Row="6"
+                  Grid.ColumnSpan="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="489"></ColumnDefinition>
+                        <ColumnDefinition Width="122"></ColumnDefinition>
+                        <ColumnDefinition Width="14"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="195"></RowDefinition>
+                        <RowDefinition Height="26"></RowDefinition>
+                        <RowDefinition Height="26"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Viewbox Stretch="Uniform"
+                         Grid.Column="1"
+                         Grid.Row="1">
+                        <Label Name="btn_getHelp"
+                           Content="Get help?"
+                           FontFamily="Lucida Fax"
+                           FontSize="40"
+                           FontWeight="Bold"
+                           Foreground="Blue"
+                           Width="213"
+                           Cursor="Hand"/>
+                    </Viewbox>
+                </Grid>
+            </Grid>
+        </Viewbox>
     </Grid>
 </UserControl>
