--- a/SanrooLK/Views/AdminOperations/Views/AdminViewEmployee.xaml
+++ b/SanrooLK/Views/AdminOperations/Views/AdminViewEmployee.xaml
@@ -236,6 +236,7 @@
                             </Viewbox>
 
 
+                            <!--Cutomer Button Grid Start-->
                             <Grid Grid.Column="9"
                                   Grid.Row="7">
                                 <Grid.ColumnDefinitions>
@@ -334,17 +335,251 @@
                                 </Viewbox>
 
                                 <Viewbox Grid.Column="0"
-                                         Grid.Row="2">
-                                    <!--Put the image here-->
+                                         Grid.Row="2" Margin="0,0,-60,0">
+                                    <Border Name="btn_addEmployeeSchedule"
+                                            Background="Black"
+                                            BorderBrush="Black"
+                                            BorderThickness="0"
+                                            CornerRadius="10"
+                                            Width="60"
+                                            Height="60">
+                                        <Border.RenderTransform>
+                                            <!--Change the properties when it is copied-->
+                                            <ScaleTransform x:Name="scaleTransformForaddEmployeeSchedule" />
+                                        </Border.RenderTransform>
+                                        <Border.RenderTransformOrigin>
+                                            <Point X="0.5" Y="0.5"/>
+                                        </Border.RenderTransformOrigin>
+                                        <Border.Triggers>
+                                            <EventTrigger RoutedEvent="MouseEnter">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.2"/>
+                                                        <!--Color change Mouse Hover-->
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                            <EventTrigger RoutedEvent="MouseLeave">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="Black" Duration="0:0:0.2"/>
+                                                        <!--Color change Mouse Leave-->
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                            <EventTrigger RoutedEvent="PreviewMouseDown">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                                        <!--Color change Mouse Click-->
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                            <EventTrigger RoutedEvent="PreviewMouseUp">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                                        <!--Color change Mouse Release-->
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="1" Duration="0:0:0.1"/>
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="1" Duration="0:0:0.1"/>
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                        </Border.Triggers>
+                                        <Border.Effect>
+                                            <!--Change the blur rad when it is in normal button format (rad into 10)-->
+                                            <DropShadowEffect ShadowDepth="2"
+                                                              BlurRadius="15"
+                                                              Color="Gray"
+                                                              Opacity="0.2"/>
+                                        </Border.Effect>
+
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <!--Change the text regarding to figma design-->
+                                            <!--Change Font Color-->
+                                        </Grid>
+                                    </Border>
                                 </Viewbox>
 
                                 <Viewbox Grid.Column="0"
-                                         Grid.Row="4">
-                                    <!--Put the image here-->
+                                         Grid.Row="4" Margin="0, 0, -60, 0">
+                                    <Border Name="btn_printEmployeeDetails"
+                                            Background="Black"
+                                            BorderBrush="Black"
+                                            BorderThickness="0"
+                                            CornerRadius="10"
+                                            Width="60"
+                                            Height="60">
+                                        <Border.RenderTransform>
+                                            <!--Change the properties when it is copied-->
+                                            <ScaleTransform x:Name="scaleTransformForPrintEmployeeDetails" />
+                                        </Border.RenderTransform>
+                                        <Border.RenderTransformOrigin>
+                                            <Point X="0.5" Y="0.5"/>
+                                        </Border.RenderTransformOrigin>
+                                        <Border.Triggers>
+                                            <EventTrigger RoutedEvent="MouseEnter">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.2"/>
+                                                        <!--Color change Mouse Hover-->
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                            <EventTrigger RoutedEvent="MouseLeave">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="Black" Duration="0:0:0.2"/>
+                                                        <!--Color change Mouse Leave-->
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                            <EventTrigger RoutedEvent="PreviewMouseDown">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                                        <!--Color change Mouse Click-->
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                            <EventTrigger RoutedEvent="PreviewMouseUp">
+                                                <BeginStoryboard>
+                                                    <Storyboard>
+                                                        <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                                        <!--Color change Mouse Release-->
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="1" Duration="0:0:0.1"/>
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="1" Duration="0:0:0.1"/>
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                        </Border.Triggers>
+                                        <Border.Effect>
+                                            <!--Change the blur rad when it is in normal button format (rad into 10)-->
+                                            <DropShadowEffect ShadowDepth="2"
+                                                              BlurRadius="15"
+                                                              Color="Gray"
+                                                              Opacity="0.2"/>
+                                        </Border.Effect>
+
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <!--Change the text regarding to figma design-->
+                                            <!--Change Font Color-->
+                                        </Grid>
+                                    </Border>
                                 </Viewbox>
-                                
-                                
                             </Grid>
+                            <!--Custom Button Grid End-->
+                            
+                            
+                            <!--Table Start-->
+                            <Viewbox Grid.Column="1"
+                             Grid.Row="7"
+                             Grid.ColumnSpan="7">
+                                <Border BorderBrush="Transparent"
+                                CornerRadius="3"
+                                Height="357" Width="606">
+                                    <Border.Background>
+                                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                                            <GradientStop Color="#E0E0E0" Offset="0"/>
+                                            <GradientStop Color="#E0E0E0" Offset="1"/>
+                                        </LinearGradientBrush>
+                                    </Border.Background>
+
+                                    <Border.Effect>
+                                        <DropShadowEffect ShadowDepth="4"
+                                                  BlurRadius="10"
+                                                  Color="Black"
+                                                  Opacity="0.2"/>
+                                    </Border.Effect>
+
+                                    <StackPanel>
+                                        <!-- Column Headers -->
+                                        <StackPanel Orientation="Horizontal" Margin="5" Width="580">
+                                            <TextBlock Text="Product ID" Width="100" FontWeight="Bold" FontFamily="Lucida Fax" FontSize="14" Margin="4"/>
+                                            <TextBlock Text="Product Name" Width="150" FontWeight="Bold" FontFamily="Lucida Fax" FontSize="14" Margin="4"/>
+                                            <TextBlock Text="Amount" Width="100" FontWeight="Bold" FontFamily="Lucida Fax" FontSize="14" Margin="4"/>
+                                            <TextBlock Text="Customer ID" Width="120" FontWeight="Bold" FontFamily="Lucida Fax" FontSize="14" Margin="4"/>
+                                            <TextBlock Text="Quantity" Width="100" FontWeight="Bold" FontFamily="Lucida Fax" FontSize="14" Margin="4"/>
+                                        </StackPanel>
+
+                                        <!-- Scrollable Content -->
+                                        <ScrollViewer Height="311" Width="578">
+                                            <StackPanel>
+                                                <Border Background="#FFFFFF" Margin="2" CornerRadius="3">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock Text="P001" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="Laptop" Width="150" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="1200" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="C101" Width="120" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="2" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                    </StackPanel>
+                                                </Border>
+
+                                                <Border Background="#F5F5F5" Margin="2" CornerRadius="3">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock Text="P002" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="Mouse" Width="150" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="25" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="C102" Width="120" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="5" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                    </StackPanel>
+                                                </Border>
+
+                                                <Border Background="#FFFFFF" Margin="2" CornerRadius="3">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock Text="P003" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="Keyboard" Width="150" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="45" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="C103" Width="120" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="3" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                    </StackPanel>
+                                                </Border>
+
+                                                <Border Background="#F5F5F5" Margin="2" CornerRadius="3">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock Text="P004" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="Monitor" Width="150" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="300" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="C104" Width="120" FontFamily="Lucida Fax" Margin="4"/>
+                                                        <TextBlock Text="1" Width="100" FontFamily="Lucida Fax" Margin="4"/>
+                                                    </StackPanel>
+                                                </Border>
+                                            </StackPanel>
+                                        </ScrollViewer>
+                                    </StackPanel>
+                                </Border>
+                            </Viewbox>
+                            <!--Table End-->
                         </Grid>
                         <!--End of Employee sub area-->
                     </Grid>
