Admin View Product; Combo Box Created

--- a/SanrooLK/Views/AdminOperations/Views/AdminViewCustomer.xaml
+++ b/SanrooLK/Views/AdminOperations/Views/AdminViewCustomer.xaml
@@ -104,7 +104,7 @@
                                                           Color="Gray"
                                                           Opacity="20"/>
                                     </Border.Effect>
-                                    <TextBox Name="txt_employeeID"
+                                    <TextBox Name="txt_customerID"
                                              HorizontalAlignment="Center" 
                                              VerticalAlignment="Center" 
                                              Width="608" 
