Employee Search Enter KeyDown

--- a/SanrooLK/Views/AdminOperations/Views/AdminViewEmployee.xaml
+++ b/SanrooLK/Views/AdminOperations/Views/AdminViewEmployee.xaml
@@ -132,6 +132,7 @@
 
 
                                 <Viewbox Stretch="Uniform"
+                                         Name="btn_Search"
                                          Grid.Column="0"
                                          Grid.ColumnSpan="5"
                                          Grid.Row="0"
